--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <noscript>Necessário ativar javascript para executar esse site</noscript>
         <div class="game">
-            <h1 onclick="location.reload()">📖Concursando v3📖</h1>
+            <h1 onclick="location.reload()">📖Questões aqui📖</h1>
         </div>
         <div class="game" id="game">
             <div class="title">
