--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="game" id="provas">
-            <h2>Selecione sua prova:</h2>
+            <h2>Selecione a prova para iniciar:</h2>
         </div>
         <div class="game" id="resultado">
         </div>
